[project]
name = "gree-exporter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "greeclimate>=2.1.0",
    "prometheus-async[aiohttp]>=25.1.0",
    "prometheus-client>=0.22.1",
]

[dependency-groups]
lint = [
    "mypy>=1.16.1",
]

[[tool.mypy.overrides]]
module = [
    "gree_exporter.*",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "greeclimate.*",
]
ignore_missing_imports = true
